[project]
name = "3DFacialReconstruction"
version = "0.1.0"
description = "3D Reconstruction Pipeline for processing stereo imaging data into textured 3D models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core dependencies - required for basic functionality
    "numpy>=1.20.0",
    "PyYAML>=6.0.2",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
# Optional dependencies for advanced image processing and development for reconstruction
full = [
    "opencv-python>=4.5.0",
    "open3d>=0.15.0",
    "Pillow>=8.0.0",
    "scipy>=1.7.0",
    "matplotlib>=3.3.0",
]

# Development and testing dependencies
dev = [
    "jupyter>=1.0.0",
    "pytest>=6.0.0",
]
